--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
+<!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>Rob Game 1.0</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-</head>
-
-<body onload="init();">
-    <script src="https://pixijs.download/release/pixi.min.js"></script>
-    <script src="Main.js"></script>
-    <script src="Map.js"></script>
-    <script>
-        function init() {
-            main = new Main();
-        }
-    </script>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>PixiJS Sample</title>
+    <style>
+      body, html, canvas {
+        width: 100%;
+        height: 100%;
+        touch-action: none;
+      }
+    </style>
+  </head>
+  <body></body>
+  <script src="./main.ts" type="text/javascript" charset="utf-8"></script>
 </html>
