--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>PixiJS Sample</title>
     <style>
       body, html, canvas {
-        width: 100%;
-        height: 100%;
         touch-action: none;
+        background: #000
       }
     </style>
   </head>
